# get_vacancies_project

./: .gitignore  README.md  pyproject.toml  requirements.txt  settings.py
src/: areas.json  jsonsaver.py  main.py  main_utils.py  pageapi.py  vacancy.py
